finished restapi structure v1
